--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "@element-plus/icons-vue": "^2.0.10",
+    "element-plus": "^2.2.18",
+    "highlight.js": "^11.6.0",
+    "marked": "^4.1.1",
+    "pinia": "^2.0.23",
+    "pinia-plugin-persistedstate": "^2.3.0",
+    "sass": "^1.55.0",
+    "video.js": "^8.0.4",
+    "vue": "^3.2.37",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@babel/types": "^7.18.10",
     "@vitejs/plugin-vue": "^3.0.3",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7",
-    "vue-tsc": "^1.8.27",
-    "@babel/types": "^7.18.10"
+    "unplugin-auto-import": "^0.11.5",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^3.2.10",
+    "vue-tsc": "^0.39.5"
   }
 }
